Added server logger & client GUI
Added logger to server, with automatic monthly log file generation.
Added client GUI, and cleaned up the code a little

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Log file
 *.log
+*.log.*
 
 # BlueJ files
 *.ctxt
@@ -28,3 +29,6 @@ data/*
 
 #intelliJ files
 .idea/*
+
+#weird additionnal gitignore files
+*.gitignore
